# Cw7_final

./: .dockerignore  .env  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build_and_deploy.yaml
apps/bot/: models.py  serializer.py  urls.py  views.py
apps/bot/management/: _chat.py  _state.py
apps/bot/management/commands/: runbot.py
apps/bot/migrations/: 0001_create_model_TgUser.py  0002_add_verification_cod_field.py
apps/bot/tg/: client.py  dc.py
apps/core/: admin.py  models.py  serializer.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializer.py  urls.py  views.py
apps/goals/migrations/: 0001_initial.py  0002_added_goals_category_model.py  0003_added_goal_model.py  0004_added_GoalComments.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
deploy/: .env  docker-compose.yaml
tests/: factories.py  fixtures.py  test_board.py  test_categories.py  test_comments.py
todolist/: settings.py  urls.py
